--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,4 +1,4 @@
-MONGODB_CONNECTION_STRING = 'mongodb://127.0.0.1:27017/pixer'
+DATABASE_URL = ''
 B2_APP_KEY =
 B2_KEY_ID =
 AUTH_MAX_TIMESTAMP_DIFFERENCE = 60000
