added friends and friend requests to db

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.732.0",
     "@aws-sdk/s3-request-presigner": "^3.733.0",
-    "@prisma/client": "^6.2.1",
+    "@peculiar/webcrypto": "^1.5.0",
+    "@prisma/client": "^5.22.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
-    "prisma": "^6.2.1"
+    "prisma": "^5.22.0"
   }
 }
