--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,13 @@
     "@aws-sdk/s3-request-presigner": "^3.733.0",
     "@peculiar/webcrypto": "^1.5.0",
     "@prisma/client": "^5.22.0",
+    "backblaze-b2": "^1.7.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
+    "@types/backblaze-b2": "^1.5.6",
     "prisma": "^5.22.0"
   }
 }
