--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "ts-node ./src/server.ts"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.732.0",
     "@aws-sdk/s3-request-presigner": "^3.733.0",
