--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,9 @@
   "scripts": {
     "start": "ts-node ./src/server.ts"
   },
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.732.0",
     "@aws-sdk/s3-request-presigner": "^3.733.0",
@@ -10,7 +13,8 @@
     "backblaze-b2": "^1.7.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/backblaze-b2": "^1.5.6",
