--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
     "start": "ts-node ./src/server.ts"
   },
   "engines": {
-    "node": ">=22.0.0"
+    "node": "16.x"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.732.0",
